welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: type mismatch;
 found   : Int
 required: java.awt.Color
         marquageSol(indice)
                     ^